[package]
name = "spyparsey"
version = "1.0.0-beta1"
authors = ["Adam Ransom"]
edition = "2018"

[dependencies]
error-chain = "0.12.0"
log = "0.4"
prettytable-rs = "^0.8"
rayon = "1.0"
spyparty = "0.1"
stderrlog = "0.4"
walkdir = "2"

[dependencies.clap]
version = "2.32.0"
features = ["yaml"]

[profile.release]
lto = true
codegen-units = 1
